network-policies/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: app1
  name: app1-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: app1
    tier: frontend
  type: NodePort
status:
  loadBalancer: {}
