network-policies/app2-access-to-ubuntu.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app1-allows-toolpod-to-access
spec:
  podSelector:
    matchLabels:
      tier: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: ubuntu
